--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
           var postData = {
               roadAddress : data.roadAddress,
               jibunAddress : jibunAddress,
-              zonecode : data.zonecode
+              zonecode : data.zonecode,
+              autoJibun : data.autoJibunAddress
           };
           window.postMessageToiOS(postData);
         },
