--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
           var postData = {
               roadAddress : data.roadAddress,
               jibunAddress : jibunAddress,
-              zonecode : data.zonecode,
-              autoJibun : data.autoJibunAddress
+              zonecode : data.zonecode
           };
-          window.postMessageToiOS(postData);
+          window.postMessageToiOS(data);
         },
         width : '100%',
         height : '100%'
