--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
           var postData = {
               roadAddress : data.roadAddress,
               jibunAddress : jibunAddress,
-              zonecode : data.zonecode
+              zonecode : data.zonecode,
+              userSelectedType : data.userSelectedType
           };
-          window.postMessageToiOS(data);
+          window.postMessageToiOS(postData);
         },
         width : '100%',
         height : '100%'
